# rosalind

./: Makefile  README.md  main.py  pyproject.toml
data/: rosalind_dna.txt  rosalind_gc.txt  rosalind_hamm.txt  rosalind_iprb.txt  rosalind_revc.txt  rosalind_rna.txt
src/: __init__.py  allele_combinations.py  count_bases.py  dna_to_rna.py  fasta.py  fibonacci.py  gc_content.py  hamming_distance.py  main.py  reverse_complement.py
tests/: conftest.py  test_allele_combinations.py  test_count_bases.py  test_dna_to_rna.py  test_fasta.py  test_fibonacci.py  test_gc_content.py  test_hamm.py  test_reverse_complement.py
