[project]
name = "rosalind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["assertpy>=1.1", "pyright>=1.1.402", "pytest>=8.4.1", "ruff>=0.12.0"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
reportMissingImports = "error"
reportMissingTypeStubs = false
